--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "express-validator": "^5.3.1",
+    "mongoose": "^5.11.18",
     "save": "^2.4.0"
   }
 }
